--- a/ch6/package.json
+++ b/ch6/package.json
@@ -5,21 +5,22 @@
     "main": "gzip-receive.js",
     "type": "module",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "mkdirp": "^0.5.1",
-      "request": "^2.88.0",
-      "slug": "^1.1.0"
+        "chance": "^1.1.11",
+        "mkdirp": "^0.5.1",
+        "request": "^2.88.0",
+        "slug": "^1.1.0"
     },
     "devDependencies": {
-      "jest": "^24.9.0"
+        "jest": "^24.9.0"
     },
     "engines": {
-      "node": ">=14"
+        "node": ">=14"
     },
     "engineStrict": true
-  }
+}
