--- a/ch6/package.json
+++ b/ch6/package.json
@@ -1,26 +1,20 @@
 {
-    "name": "02-gzip-server",
+    "name": "11-custom-writable-to-file-stream",
     "version": "1.0.0",
     "description": "",
-    "main": "gzip-receive.js",
+    "main": "to-file-stream.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "chance": "^1.1.11",
-        "mkdirp": "^0.5.1",
-        "request": "^2.88.0",
-        "slug": "^1.1.0"
-    },
-    "devDependencies": {
-        "jest": "^24.9.0"
+      "mkdirp-promise": "^5.0.1"
     },
     "engines": {
-        "node": ">=14"
+      "node": ">=14"
     },
     "engineStrict": true
-}
+  }
